[tool.poetry]
name = "scvega"
version = "0.0.2"
description = "VEGA: a VAE Enhanced by Gene Annotations for interpretable scRNA-seq deep learning"
authors = ["Lucas Seninge <lseninge@ucsc.edu>"]
packages = [
    {include = "vega"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = "GPL-3.0-or-later"
homepage = "https://github.com/LucasESBS/vega"


[tool.poetry.dependencies]
adjustText = "^0.7.3"
anndata = "^0.7.5"
furo = {version = "^2022.3.4", optional= true}
markdown = "3.3.4"
matplotlib = "^3.1.3"
numpy = "^1.18.1"
pandas = "^1.0.1"
python = "^3.7"
scanpy = "^1.7.0"
scipy = "^1.6.0"
seaborn = "^0.10.0"
scvi-tools = "0.9.0"
scikit-learn = "^0.23.1"
scikit-misc = {version = "^0.1.3", optional = true}
setuptools = "<=59.5.0"
sphinx = {version = ">=4.1,<4.4", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
sphinx-design = {version = "*", optional = true}
sphinx-gallery = {version = ">0.6", optional = true}
sphinx_copybutton = {version = "<=0.3.1", optional = true}
sphinx_remove_toctrees = {version = "*", optional = true}
sphinxext-opengraph = {version = "*", optional = true}
torch = "^1.8.0"
typing_extensions = {version = "*", python = "<3.8", optional = true}
tqdm = "^4.56.0"

[tool.poetry.extras]
dev = ["black", "pytest", "jupyter", "nbformat", "nbconvert"]

docs = [
  "sphinx",
  "scanpydoc",
  "nbsphinx",
  "nbsphinx-link",
  "ipython",
  "furo",
  "typing_extensions",
  "sphinx-autodoc-typehints",
  "sphinx_copybutton",
  "sphinx_gallery",
  "sphinx_remove_toctrees",
  "sphinx-design",
  "sphinxext-opengraph",
]

[tool.poetry.dev-dependencies]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37
[testenv]
deps = pytest
extras =
    dev
commands = pytest {posargs}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
